{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 56,
  "lineage": "8784de19-a05a-22c8-3892-b649a10c8774",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:930289539424:vpc/vpc-870d50ff",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-ab2cc4c6",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-8c206af4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-870d50ff",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-78aa9503",
            "owner_id": "930289539424",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:930289539424:loadbalancer/app/terraform-asg-example/b96e06d3f237ecca",
            "arn_suffix": "app/terraform-asg-example/b96e06d3f237ecca",
            "dns_name": "terraform-asg-example-1316173065.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:930289539424:loadbalancer/app/terraform-asg-example/b96e06d3f237ecca",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-asg-example",
            "security_groups": [
              "sg-02a36c4d851ed18e0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-6707a81f"
              },
              {
                "subnet_id": "subnet-a108c0eb"
              },
              {
                "subnet_id": "subnet-b99920e4"
              },
              {
                "subnet_id": "subnet-d70938fc"
              }
            ],
            "subnets": [
              "subnet-6707a81f",
              "subnet-a108c0eb",
              "subnet-b99920e4",
              "subnet-d70938fc"
            ],
            "vpc_id": "vpc-870d50ff",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:930289539424:listener/app/terraform-asg-example/b96e06d3f237ecca/8188dcd0cad1cc4a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:930289539424:listener/app/terraform-asg-example/b96e06d3f237ecca/8188dcd0cad1cc4a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:930289539424:loadbalancer/app/terraform-asg-example/b96e06d3f237ecca",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example",
            "aws_security_group.alb",
            "data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:930289539424:targetgroup/terraform-asg-example/cfab3ead8617ba86",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:930289539424:listener-rule/app/terraform-asg-example/b96e06d3f237ecca/8188dcd0cad1cc4a/55d66751f06ad64c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:930289539424:listener-rule/app/terraform-asg-example/b96e06d3f237ecca/8188dcd0cad1cc4a/55d66751f06ad64c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:930289539424:listener/app/terraform-asg-example/b96e06d3f237ecca/8188dcd0cad1cc4a",
            "priority": 100
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example",
            "aws_lb_listener.http",
            "aws_lb_target_group.asg",
            "aws_security_group.alb",
            "data.aws_subnet_ids.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:930289539424:targetgroup/terraform-asg-example/cfab3ead8617ba86",
            "arn_suffix": "targetgroup/terraform-asg-example/cfab3ead8617ba86",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:930289539424:targetgroup/terraform-asg-example/cfab3ead8617ba86",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-asg-example",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-870d50ff"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:930289539424:security-group/sg-02a36c4d851ed18e0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a36c4d851ed18e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-alb",
            "name_prefix": "",
            "owner_id": "930289539424",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-870d50ff"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:930289539424:security-group/sg-02d83a2dd5c0a8c7c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02d83a2dd5c0a8c7c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-example-instance",
            "name_prefix": "",
            "owner_id": "930289539424",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-870d50ff"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}